Use StandardCharsets.UTF_8 and avoid exception handling